--- a/css/sortegram.css
+++ b/css/sortegram.css
@@ -31,7 +31,7 @@ body, html {
               url(../appbar.lines.horizontal.4-2.png),
               url(../appbar.save.png),
               url(../appbar.sort.numeric.png),
-              url(../appbar.trophy.svg),
+              url(../appbar.trophy.png),
               url(../ic_arrow_forward_white_24dp_2x.png),
               url(../ic_done_white_24dp_1x.png);
 }
@@ -78,7 +78,7 @@ input, button {
   z-index: -1;
 }
 
-#manage {
+#sg-manage {
   background-color: transparent;
   width: 100%;
   height: 100%;
@@ -112,7 +112,7 @@ input, button {
   left: -110%
 }
 
-#classic-raffle {
+#c-raffle {
   background-color: rgba(255, 255, 255, 0.3);
   background-image: url(../img/appbar.sort.numeric.png);
   background-size: 80%;
@@ -135,10 +135,10 @@ input, button {
   -ms-transform: translate(-50%,-50%);
   -o-transform: translate(-50%,-50%);
 }
-#classic-raffle:active, #classic-raffle:hover {
+#c-raffle:active, #classic-raffle:hover {
   background-color: rgba(0,0,0,0.4);
 }
-#classic-raffle::after {
+#c-raffle::after {
   content: "Sorteio clássico";
   color: #fff;
   position: absolute;
@@ -147,7 +147,7 @@ input, button {
   width: 100%;
 }
 
-#sortegram-raffle {
+#sg-raffle {
   background-color: rgba(255, 255, 255, 0.3);
   background-image: url(../img/logo/white/SG-icon-144.png);
   background-size: 60%;
@@ -171,10 +171,10 @@ input, button {
   -ms-transform: translate(-50%,-50%);
   -o-transform: translate(-50%,-50%);
 }
-#sortegram-raffle:active, #sortegram-raffle:hover {
+#sg-raffle:active, #sortegram-raffle:hover {
   background-color: rgba(0,0,0,0.4);
 }
-#sortegram-raffle::after {
+#sg-raffle::after {
   content: "Sorteio Sortegram";
   color: #fff;
   position: absolute;
@@ -648,7 +648,7 @@ background-color: #FF00CB;
     border: 5px solid transparent;
 }
 
-#result {
+#c-result {
   background-color: rgba(236, 248, 255, 0.5);
   color: #FFFFFF;
   box-shadow: 0 7px 15px rgba(0, 0, 0, 0.23);
@@ -673,7 +673,7 @@ background-color: #FF00CB;
   overflow-y: auto;
 }
 
-#SSresult {
+#sg-result {
   background-color: rgba(0, 0, 0, 0.3);
   margin-top: 60px;
   color: #FFFFFF;
@@ -1070,7 +1070,7 @@ background-color: #FF00CB;
     display: none;
     width: 70px;
     height: 70px;
-    background-image: url(../img/appbar.trophy.svg);
+    background-image: url(../img/appbar.trophy.png);
     background-size: auto 125%;
     background-repeat: no-repeat;
     background-position: 50%;
