--- a/css/sortegram.css
+++ b/css/sortegram.css
@@ -2,6 +2,7 @@
 body, html {
   font-family: Segoe UI;
   background: #FFF;
+  color: #fff;
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -161,7 +162,6 @@ input, button {
   -o-border-radius: 50% 50% 25% 25%;
   width: 200px;
   height: 200px;
-  height: 180px;
   position: relative;
     top: 35%;
     left: 50%;
@@ -434,7 +434,7 @@ background-color: #FF00CB;
   position: fixed;
   top: 0;
   padding: 1px;
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 30px;
   box-shadow: 0px 0px 20px #000;
   -webkit-box-shadow: 0px 0px 20px #000;
@@ -575,8 +575,9 @@ background-color: #FF00CB;
     text-shadow: 1px 1px 0px #FFF;
 }
 
-.new-btn {
+.new-btn, .new-btn-manage {
   position: relative;
+  margin-top: 5px;
     bottom: 0%;
     left: 0%;
     font-size: 16pt;
@@ -592,7 +593,7 @@ background-color: #FF00CB;
     -o-transition: .1s ease;
     outline: none;
 }
-.new-btn:active {
+.new-btn:active, .new-btn-manage:active {
     background-color: #5181AF;
     color: #ffffff;
     transform: scale(.9);
@@ -615,9 +616,10 @@ background-color: #FF00CB;
     bottom: 0%;
     left: 0%;
     font-size: 16pt;
-    background-color: #005807;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
-    border: 5px solid #005807;
+    border: 0;
     width: 100%;
     transition: .1s ease;
     -webkit-transition: .1s ease;
@@ -627,9 +629,6 @@ background-color: #FF00CB;
     outline: none;
 }
 .back-to-home-btn:active {
-    background-color: #5181AF;
-    border: 5px solid #5181AF;
-    color: #ffffff;
     transform: scale(.9);
     -webkit-transform: scale(.9);
     -moz-transform: scale(.9);
@@ -665,7 +664,8 @@ background-color: #FF00CB;
   max-width: -moz-calc(100% - 16px);
   max-width: -ms-calc(100% - 16px);
   max-width: -o-calc(100% - 16px);
-  height: 170px;
+  height: auto;
+  max-height: 170px;
   min-height: 90px;
   border-top: 3px solid #fff;
   border-bottom: 3px solid #fff;
@@ -734,7 +734,8 @@ background-color: #FF00CB;
 }
 
 .input-username {
-  padding: 0 0 0 10px;
+  padding: 0 45px 0 10px;
+    width: 60%;
     max-width: 60%;
     height: 45px;
     color: #FFF;
@@ -794,21 +795,20 @@ background-color: #FF00CB;
 }
 
 .input-username-btn {
-  width: 45px;
-  height: 46px;
-    margin-left: -5px;
-  border: 0;
-    border-bottom: 4px solid #fff;
-  background-color: transparent;
+    width: 45px;
+    height: 50px;
+    margin-left: -50px;
+    border: 0;
+    background-color: transparent;
     background-image: url(../img/appbar.add.png);
     background-size: 90%;
     background-position: 50%;
     background-repeat: no-repeat;
-  transition: .1s ease;
-  -webkit-transition: .1s ease;
-  -moz-transition: .1s ease;
-  -ms-transition: .1s ease;
-  -o-transition: .1s ease;
+    transition: .1s ease;
+    -webkit-transition: .1s ease;
+    -moz-transition: .1s ease;
+    -ms-transition: .1s ease;
+    -o-transition: .1s ease;
 }
 .input-username-btn:active, .input-username-btn:hover {
   background-color: rgba(0, 0, 0, 0.3);
@@ -901,6 +901,46 @@ background-color: #FF00CB;
 }
 
 #user-names-2 dt:before {
+  content: counter(user-luck-number);
+  counter-increment: user-luck-number;
+  color: #B5B5B5;
+  padding-right: 50px;
+  padding-top: 4px;
+  float: left;
+  padding-bottom: 16px;
+  font-size: 11pt;
+}
+
+#user-names-manage {
+  counter-reset: user-luck-number;
+  line-height: 1;
+  text-align: left;
+  position: relative;
+  width: 100%;
+  max-height: 170px;
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+}
+
+#user-names-manage dt {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #fff;
+  text-align: left;
+  border-bottom: 1px solid #D4D4D4;
+  padding-top: 15px;
+  padding-left: 4px;
+  height: 30px;
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+}
+
+#user-names-manage dt:before {
   content: counter(user-luck-number);
   counter-increment: user-luck-number;
   color: #B5B5B5;
@@ -1130,35 +1170,24 @@ background-color: #FF00CB;
 
 
 .splat-loader {
-    display: none;
-    width: 70%;
-    height: 70%;
-    background-color: #FFF;
-    border-radius: 25px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
+    width: 100%;
+    height: 100%;
+    background-color: #148000;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     z-index: 100;
 }
 
-.splat-loader-before {
-    width: 100%;
-    height: 100%;
-    background-color: #FFF;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    z-index: 99;
-}
-
 .splat-loader-spinner {
-    width: 150px;
-    height: 150px;
-    border: 3px solid #00FF10;
+    width: 100px;
+    height: 100px;
+    border: 3px solid #FFF;
     border-bottom: 3px solid transparent;
     border-left: 3px solid transparent;
     border-radius: 50%;
@@ -1167,14 +1196,14 @@ background-color: #FF00CB;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     position: absolute;
-    top: calc(50% - 75px);
-    top: -webkit-calc(50% - 75px);
-    top: -moz-calc(50% - 75px);
-    top: -ms-calc(50% - 75px);
-    left: calc(50% - 75px);
-    left: -webkit-calc(50% - 75px);
-    left: -moz-calc(50% - 75px);
-    left: -ms-calc(50% - 75px);
+    top: calc(50% - 50px);
+    top: -webkit-calc(50% - 50px);
+    top: -moz-calc(50% - 50px);
+    top: -ms-calc(50% - 50px);
+    left: calc(50% - 50px);
+    left: -webkit-calc(50% - 50px);
+    left: -moz-calc(50% - 50px);
+    left: -ms-calc(50% - 50px);
     animation: loader-spinner 1s infinite linear;
     -webkit-animation: loader-spinner 1s infinite linear;
     -moz-animation: loader-spinner 1s infinite linear;
